fix image not stretching to container

--- a/src/components/slideshow.module.scss
+++ b/src/components/slideshow.module.scss
@@ -6,7 +6,6 @@
   min-width: calc(100% - 500px);
   width: 1000px;
   max-width: 90%;
-  height: 75vh;
   min-height: 300px;
   max-height: 550px;
   background-color: #333;
